<resources>
    <string name="app_name">CookingRecipes</string>
    <string name="fragment_shopping_list_Item_name">Item Name</string>
    <string name="fragment_shopping_list_quantity">Quantity</string>
    <string name="fragment_shopping_list_add">ADD</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="camera_permission_is_needed_to_take_a_photo">Camera permission is needed to take a photo</string>
    <string name="camera_permission_is_needed_to_pick_a_photo">Storage permission is needed to pick a photo</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="instructions">Instructions</string>
    <string name="save">Save</string>
    <string name="recipes">Recipes 🧑‍🍳</string>
    <string name="shopping_list">Shopping List 🛒</string>
    <string name="recipe_instructions">Recipe Instructions</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="settings">Settings ⚙️</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="item_ingredient_add">Add to Shopping List</string>
    <string name="delete">Delete</string>
    <string name="about">We help you to save and discover new recipes everyday and create a shopping list for them</string>
    <string name="main_page_headline">THE COOKING APP!</string>
    <string name="recipe_form_headline">Recipe Details</string>
    <string name="recipe_form_about">Please fill out the form below to add details for your recipe.</string>
    <string name="ingredient">Ingredients</string>
    <string name="item_shopping_list_ingredient_name">Ingredient Name</string>
    <string name="item_shopping_list_quantity">Quantity</string>
    <string name="item_shopping_list_delete">Delete</string>
    <string name="after_delete_recipe_alert">Recipe Deleted</string>
    <string name="after_delete_item_alert">Item Deleted</string>
    <string name="item_saved_alert">Item Added</string>
    <string name="item_saved_in_shopping_list_alert">Item Added To Shopping List</string>
    <string name="edit_recipe_label">New Recipe</string>
    <string name="recipe_details_label">Recipe Details</string>
    <string name="recipe_list_label">Recipe List 🧑‍🍳</string>
    <string name="home_label">Home Page</string>
    <string name="play">Play Music</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>




</resources>
