<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/item_horizontal_padding">

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ingredient_name"
        android:textSize="@dimen/item_text_size"
        android:textColor="@color/darkblue"
        android:padding="@dimen/item_vertical_padding"/>

    <TextView
        android:id="@+id/ingredient_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quantity"
        android:textSize="@dimen/item_text_size"
        android:textColor="@color/darkblue"
        android:padding="@dimen/item_vertical_padding"/>

    <ImageButton
        android:id="@+id/button_add_to_shopping_list"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/cart_logo"
        android:contentDescription="@string/item_ingredient_add"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:padding="@dimen/item_button_padding"/>
</LinearLayout>
